CQRS de Dashboard
Agregue un adaptador y un controlador para el query model
Agregue tambien la documentacion para ese controlador en openapi.yaml
